--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,11 +32,13 @@ body
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
+    color: grey;
 }
 
 #container h1
 {
     font-size: 20px;
+    color: grey;
 }
 #post
 {
